add: localization settings and terminal

--- a/HealthyTrailer/en.lproj/Localizable.strings
+++ b/HealthyTrailer/en.lproj/Localizable.strings
@@ -23,3 +23,6 @@
 "Axles:" = "Axles:";
 "This parameter is determined automatically" = "This parameter is determined automatically";
 "Notification sound" = "Notification sound";
+
+"Terminal" = "Terminal";
+"Status" = "Status";
