--- a/HealthyTrailer/uk.lproj/Localizable.strings
+++ b/HealthyTrailer/uk.lproj/Localizable.strings
@@ -23,3 +23,6 @@
 "Axles:" = "Осей:";
 "This parameter is determined automatically" = "Цей параметр визначається автоматично";
 "Notification sound" = "Звук сповіщення";
+
+"Terminal" = "Термінал";
+"Status" = "Статус";
